Fix spacing in articles section

--- a/assets/stylesheets/index.sass
+++ b/assets/stylesheets/index.sass
@@ -46,6 +46,9 @@ $secondary: #bbb
     li
       margin-bottom: 40px
 
+      p
+        margin-top: 10px
+
   section.books
 
   section.links
